<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical">

    <include
        android:id="@+id/title_userInfo_profile"
        layout="@layout/view_layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_userInfo_head_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/im_userInfo_head_avatar"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="8dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/em_default_avatar" />

                        <ImageView
                            android:id="@+id/im_userInfo_head_headphoto_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/im_userInfo_head_avatar"
                            android:layout_alignBottom="@+id/im_userInfo_head_avatar"
                            android:layout_alignRight="@+id/im_userInfo_head_avatar"
                            android:layout_margin="3dip"
                            android:src="@drawable/em_profile_headphoto_update_icon" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerCrop"
                    android:text="@string/userinfo_txt_avatar"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_user_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_nick"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_nick" />

                <TextView
                    android:id="@+id/txt_userInfo_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/userinfo_txt_noinput" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_name_withNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_name"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_name" />

                <TextView
                    android:id="@+id/txt_userInfo_name_withNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/userinfo_txt_nosettings" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_qrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_qrcode"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_qrcode" />

                <ImageView
                    android:id="@+id/im_userInfo_qrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_me_smail" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_address"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_address" />

                <TextView
                    android:id="@+id/txt_userInfo_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_userInfo_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_sex"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_sex" />

                <TextView
                    android:id="@+id/txt_userInfo_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/userinfo_txt_nosettings" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_area"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_area" />

                <TextView
                    android:id="@+id/txt_userInfo_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/userinfo_txt_noinput" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/black3" />

            <LinearLayout
                android:id="@+id/layout_userInfo_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_userInfo_sign"
                    style="@style/list_txt_Style_without_nopadding"
                    android:text="@string/userinfo_txt_sign" />

                <TextView
                    android:id="@+id/txt_userInfo_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/userinfo_txt_noinput" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
